--- a/app/views/fail.html
+++ b/app/views/fail.html
@@ -66,7 +66,7 @@
             {% endif %}
 
             {% if data.wordOne === 'SPIRE' or data.wordOne === 'REACT' %}
-                {% if data.wordTwo === 'SPIRE' or data.wordTwo === '' %}
+                {% if data.wordTwo === 'SPIRE' or data.wordTwo === 'REACT' %}
                     {% set wordsIcon = tickIcon %}
                 {% endif %}
             {% endif %}
