--- a/app/views/success.html
+++ b/app/views/success.html
@@ -61,12 +61,12 @@
                 {% set numberIcon = tickIcon %}
             {% endif %}
 
-            {% if data.daysFaithful === '111' %}
+            {% if data.daysFaithful === '147' %}
                 {% set daysIcon = tickIcon %}
             {% endif %}
 
             {% if data.wordOne === 'SPIRE' or data.wordOne === 'REACT' %}
-                {% if data.wordTwo === 'SPIRE' or data.wordTwo === '' %}
+                {% if data.wordTwo === 'SPIRE' or data.wordTwo === 'REACT' %}
                     {% set wordsIcon = tickIcon %}
                 {% endif %}
             {% endif %}
@@ -116,7 +116,7 @@
                 {% set numberIcon = tickIcon %}
             {% endif %}
 
-            {% if data.daysFaithful === '147' %}
+            {% if data.daysFaithful === '111' %}
                 {% set daysIcon = tickIcon %}
             {% endif %}
 
